--- a/css/app.css
+++ b/css/app.css
@@ -49,8 +49,8 @@ body {
 .box {
   aspect-ratio: 1;
   background-color: #1389B2;
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
