--- a/css/app.css
+++ b/css/app.css
@@ -34,8 +34,9 @@ body {
 }
 
 .section h1 {
-  font-size: 80px;
+  font-size: 35px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 /* GRID */
@@ -54,4 +55,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* MEDIE */
+@media (min-width: 576px) {
+  .section h1 {
+    font-size: 60px;
+  }  
+}
+
+@media (min-width: 920px) {
+  .section h1 {
+    font-size: 80px;
+  }  
 }
