--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 1.2rem;
+  transition: 0.1s linear;
+  cursor: pointer;
+  box-shadow: 0px 0px 11px 2px rgba(255,255,255,1);
+}
+
+.box:hover {
+  opacity: 0.6;
 }
 
 /* MEDIE */
